@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright 2018 BNY Mellon.
+  ~ Copyright 2020 BNY Mellon.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -33,14 +33,14 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <java.version>10</java.version>
-        <maven.compiler.source>10</maven.compiler.source>
-        <maven.compiler.target>10</maven.compiler.target>
+        <java.version>14</java.version>
+        <maven.compiler.source>14</maven.compiler.source>
+        <maven.compiler.target>14</maven.compiler.target>
 
-        <apache-collections.version>4.1</apache-collections.version>
-        <eclipse-collections.version>9.2.0</eclipse-collections.version>
-        <guava.version>25.0-jre</guava.version>
-        <vavr.version>0.9.2</vavr.version>
+        <apache-collections.version>4.4</apache-collections.version>
+        <eclipse-collections.version>10.2.0</eclipse-collections.version>
+        <guava.version>28.2-jre</guava.version>
+        <vavr.version>0.10.2</vavr.version>
         <junit.version>4.12</junit.version>
     </properties>
 
@@ -90,4 +90,20 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
+                    <compilerArgs>
+                        --enable-preview
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
